docs/pages/versions/v56.0.0/sdk/ui/swift-ui/securefield.mdx
---
title: SecureField
description: 用于密码输入的 SwiftUI SecureField 组件。
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-56/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['ios', 'tvos', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { ContentSpotlight } from '~/ui/components/ContentSpotlight';

Expo UI SecureField 与官方 SwiftUI [SecureField API](https://developer.apple.com/documentation/swiftui/securefield) 保持一致，并提供一个用于密码和其他敏感文本、会对用户输入进行掩码处理的文本字段。

<ContentSpotlight
  variant="component"
  aspect="landscape"
  src="/static/images/expo-ui/securefield/ios-light.webp"
  darkSrc="/static/images/expo-ui/securefield/ios-dark.webp"
  alt="三行 SecureField，用于更改密码"
/>

## 安装

<APIInstallSection />

## 用法

### 基本安全字段

```tsx BasicSecureFieldExample.tsx
import { useState } from 'react';
import { Host, SecureField } from '@expo/ui/swift-ui';

export default function BasicSecureFieldExample() {
  const [password, setPassword] = useState('');

  return (
    <Host matchContents>
      <SecureField placeholder="密码" onValueChange={setPassword} />
    </Host>
  );
}
```

### 提交处理

使用 [`submitLabel`](modifiers/#submitlabelsubmitlabel) 和 [`onSubmit`](modifiers/#onsubmithandler) 修饰符来处理来自键盘的表单提交。

```tsx SecureFieldSubmitExample.tsx
import { useState } from 'react';
import { Host, SecureField } from '@expo/ui/swift-ui';
import { submitLabel, onSubmit } from '@expo/ui/swift-ui/modifiers';

export default function SecureFieldSubmitExample() {
  const [password, setPassword] = useState('');

  return (
    <Host matchContents>
      <SecureField
        placeholder="密码"
        onValueChange={setPassword}
        modifiers={[submitLabel('done'), onSubmit(() => console.log('登录已提交'))]}
      />
    </Host>
  );
}
```

### 命令式 ref

使用 ref 以命令式方式设置文本、聚焦或取消聚焦安全字段。

```tsx ImperativeSecureFieldExample.tsx
import { useRef } from 'react';
import { Host, SecureField, SecureFieldRef, Button, HStack, VStack } from '@expo/ui/swift-ui';
import { buttonStyle } from '@expo/ui/swift-ui/modifiers';

export default function ImperativeSecureFieldExample() {
  const ref = useRef<SecureFieldRef>(null);

  return (
    <Host matchContents>
      <VStack>
        <SecureField ref={ref} placeholder="密码" />
        <HStack spacing={12}>
          <Button
            modifiers={[buttonStyle('bordered')]}
            onPress={() => ref.current?.focus()}
            label="聚焦"
          />
          <Button
            modifiers={[buttonStyle('bordered')]}
            onPress={() => ref.current?.blur()}
            label="失焦"
          />
          <Button
            modifiers={[buttonStyle('bordered')]}
            onPress={() => ref.current?.setText('secret123')}
            label="设置文本"
          />
        </HStack>
      </VStack>
    </Host>
  );
}
```

## API

```tsx
import { SecureField } from '@expo/ui/swift-ui';
```

<APISection packageName="expo-ui/swift-ui/securefield" apiName="SecureField" />
